--- a/components/UIControlBar/UIControlBar.module.scss
+++ b/components/UIControlBar/UIControlBar.module.scss
@@ -1,4 +1,34 @@
 .wrapper {
   position: absolute;
-  top: 0px;
+  top: 10px;
+  display: flex;
+  flex-direction: row;
+  height: 50px;
+  background: #fff;
+  border-radius: 8px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07),
+    0 4px 8px rgba(0, 0, 0, 0.07), 0 8px 16px rgba(0, 0, 0, 0.07),
+    0 16px 32px rgba(0, 0, 0, 0.07), 0 32px 64px rgba(0, 0, 0, 0.07);
+}
+
+.logo {
+  margin: 10px;
+  border-right: 1px solid rgb(223, 223, 223);
+  display: flex;
+  width: 60px;
+  justify-content: center;
+  align-items: center;
+}
+
+.button {
+  margin: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 60px;
+  cursor: pointer;
+}
+
+.buttonActive {
+  font-weight: 500;
 }
