--- a/components/UIControlBar/UIControlBar.module.scss
+++ b/components/UIControlBar/UIControlBar.module.scss
@@ -11,24 +11,56 @@
     0 16px 32px rgba(0, 0, 0, 0.07), 0 32px 64px rgba(0, 0, 0, 0.07);
 }
 
-.logo {
-  margin: 10px;
-  border-right: 1px solid rgb(223, 223, 223);
-  display: flex;
-  width: 60px;
-  justify-content: center;
-  align-items: center;
-}
-
 .button {
-  margin: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 60px;
+  width: 80px;
+  margin: 8px 0px;
   cursor: pointer;
+
+  .icon {
+    height: 30px;
+    width: 30px;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
 }
 
-.buttonActive {
-  font-weight: 500;
+.vr {
+  border-right: 1px solid rgb(212, 212, 212);
+
+  .icon {
+    background-image: url('/icons/vr.svg');
+    background-size: 28px;
+  }
+}
+
+.translate {
+  .icon {
+    background-image: url('/icons/translate.svg');
+    background-size: 30px;
+  }
+}
+
+.rotate {
+  border-right: 1px solid rgb(212, 212, 212);
+  .icon {
+    background-image: url('/icons/rotate.svg');
+    background-size: 30px;
+    background-position-y: 9px;
+  }
+}
+
+.reset {
+  .icon {
+    background-image: url('/icons/reset.svg');
+    background-size: 25px;
+  }
+}
+
+.active {
+  .icon {
+    opacity: 0.3;
+  }
 }
