--- a/components/UIControlBar/UIControlBar.module.scss
+++ b/components/UIControlBar/UIControlBar.module.scss
@@ -1,3 +1,5 @@
+$border: 1px solid rgb(212, 212, 212);
+
 .wrapper {
   position: absolute;
   top: 10px;
@@ -9,6 +11,32 @@
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07),
     0 4px 8px rgba(0, 0, 0, 0.07), 0 8px 16px rgba(0, 0, 0, 0.07),
     0 16px 32px rgba(0, 0, 0, 0.07), 0 32px 64px rgba(0, 0, 0, 0.07);
+}
+
+.scenerySelect {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 8px 0px;
+  padding: 0px 18px;
+  border-right: $border;
+
+  select {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    outline: none;
+    padding: 6px;
+    font-size: 18px;
+    font-weight: 500;
+    color: white;
+    border-radius: 4px;
+    cursor: pointer;
+
+    option {
+      color: black;
+    }
+  }
 }
 
 .button {
@@ -28,7 +56,7 @@
 }
 
 .vr {
-  border-right: 1px solid rgb(212, 212, 212);
+  border-right: $border;
 
   .icon {
     background-image: url('/icons/vr.svg');
@@ -44,7 +72,8 @@
 }
 
 .rotate {
-  border-right: 1px solid rgb(212, 212, 212);
+  border-right: $border;
+
   .icon {
     background-image: url('/icons/rotate.svg');
     background-size: 30px;
